# alignrl

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  autoresearch-results.tsv  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml
configs/: dpo.yaml  grpo.yaml  sft.yaml
docs/: api.md  comparison.json  concepts.md  custom-rewards.md  dashboard.js  getting-started.md  index.html  style.css  training-guide.md
docs/plans/: 2026-03-25-hub-eval-wandb-design.md
examples/: README.md  custom_rewards.py  evaluate_stages.py  launch_demo.py  quickstart_dpo.py  quickstart_grpo.py  quickstart_sft.py  serve_model.py
notebooks/: 01_sft_instruction_tuning.ipynb  02_grpo_math_reasoning.ipynb  03_dpo_preference_alignment.ipynb  04_evaluation_benchmarks.ipynb  05_inference_serving.ipynb
src/alignrl/: __init__.py  callbacks.py  cli.py  config.py  demo.py  dpo.py  eval.py  grpo.py  hub.py  inference.py  rewards.py  runner_base.py  sft.py  types.py
tests/: conftest.py  test_callbacks.py  test_cli.py  test_config.py  test_demo.py  test_dpo.py  test_eval.py  test_grpo.py  test_hub.py  test_inference.py  test_init.py  test_rewards.py  test_sft.py  test_types.py
